# InvoiceFi-Stellar

./: .env.example  CONTRIBUTING.md  FREIGHTER_DISCONNECT_IMPLEMENTATION.md  README.md  docker-compose.yml
.github/workflows/: app-ci.yml  ci.yml  contract-ci-gate.yml  contracts.yml  migration-ci.yml  soroban-ci.yml
backend/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: MIGRATION_GUIDE.md  schema.prisma
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/test/: invoice-lifecycle.e2e-spec.ts
contracts/: .gitignore  Cargo.toml  README.md  SECURITY.md
contracts/access-control/: Cargo.toml
contracts/access-control/src/: lib.rs  test.rs
contracts/financing-pool/: Cargo.toml
contracts/financing-pool/src/: error.rs  lib.rs  reentrancy_tests.rs  test.rs  tests.rs  types.rs
contracts/invoice/: Cargo.toml
contracts/invoice/src/: error.rs  lib.rs  test.rs  tests.rs  types.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: error.rs  lib.rs  nonce.rs  reentrancy_tests.rs  tests.rs  types.rs
docs/: EXCLUDED_MODULES.md  access-control.md  protocol-spec.md
docs/audits/: cross-contract-reentrancy-audit.md
docs/compliance/: data-inventory.md  export-schema.md  kyc-vendor-evaluation.md  privacy-architecture.md  sep41-conformance-report.md  sep41-gap-analysis.md
docs/contributing/: contract-ci.md
docs/monitoring/: anomaly-rules.md
docs/operations/: database-migrations.md
docs/security/: secret-rotation.md  threat-model.md
frontend/: README.md  index.html  middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: InvestorPortfolioTable.tsx  (+1 more)
scripts/: audit-secrets.sh  check-storage-keys.sh  contract-resource-diff.sh  contract-simulate.sh  test-migration-reversibility.sh  test-migrations-local.sh  test-new-migration.sh  validate-expand-contract.sh  validate-migration-naming.sh  vault-init.sh
(+106 files in other folders)
