[package]
name = "financing-pool-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
access-control = { path = "../access-control" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
