[package]
name = "settlement"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.5.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.5.0", default-features = false, features = ["testutils"] }
